--- a/index.html.html
+++ b/index.html.html
@@ -8,7 +8,10 @@
 <body>
 	<header>
 	<section>
-	<a href="./">WebStudio</a>
+	<div>
+	<span>Web</span>
+	<span>Studio</span>
+	</div>
 	<nav>
 	<ul>
 		<li><a href="">Студія</a></li>
@@ -16,8 +19,10 @@
 		<li><a href="">Контакти </a></li>
 	</ul>
 	</nav>
+	<div>
 	<a href="">info@devstudio.com</a>
-	<p>+38 096 111 11 11</p>
+	<a href="">+38 096 111 11 11</a>
+	</div>
 	</section>
 	</header>
 	<main>
@@ -44,9 +49,17 @@
 	</section>
 	<section>
 		<h2>Чим ми займаємося</h2>
-		<img src="IMG/box 1.jpg" alt="Чим ми займаємося картинка 1" width="370" height="294">
-		<img src="IMG/box 2.jpg" alt="Чим ми займаємося картинка 2" width="370" height="294">
-		<img src="IMG/box 3.jpg" alt="Чим ми займаємося картинка 3" width="370" height="294">	
+		<ul>
+		<li>
+			<img src="IMG/box 1.jpg" alt="Чим ми займаємося картинка 1" width="370" height="294">
+		</li>
+		<li>
+			<img src="IMG/box 2.jpg" alt="Чим ми займаємося картинка 2" width="370" height="294">
+		</li>
+		<li>
+			<img src="IMG/box 3.jpg" alt="Чим ми займаємося картинка 3" width="370" height="294">
+		</li>
+		</ul>	
 	</section>
 	 <section>
 	 	<h2>Наша команда</h2>
@@ -75,10 +88,15 @@
 	 </section>
 	</main>
 	 <footer>
-	 	<a href="./">WebStudio</a>
+		<div>
+		<span>Web</span>
+		<span>Studio</span>
+		</div>
+		<div>
 	 	<address>м. Київ, пр-т Лесі Українки, 26</address>
-	 	<a href="">info@devstudio.com</a>
-	 	<p>+38 096 111 11 11</p>
+			<a href="">info@devstudio.com</a>
+			<a href="">+38 096 111 11 11</a>
+		</div>
 	 </footer>
 </body>
 </html>
